Bug 403682 - Closing sliding of top left menu after startup of Discover in mobile width
Summary: Closing sliding of top left menu after startup of Discover in mobile width
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.14.4
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-28 11:12 UTC by Alexander Mentyu
Modified: 2019-04-17 18:06 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
There is no such menu when starting in non-mobile width (540.94 KB, video/mp4)
2019-01-28 11:20 UTC, Alexander Mentyu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Mentyu 2019-01-28 11:12:37 UTC
STEPS TO REPRODUCE
1. Start Discover in initial mobile width size (~600px width).
2. Close Discover.
3. Start Discover once again.

OBSERVED RESULT
Menu from top left button slides to the left

EXPECTED RESULT
Discover starts without appearance of the menu

SOFTWARE/OS VERSIONS
Operating System: KDE neon Developer Edition
KDE Plasma Version: 5.15.80
KDE Frameworks Version: 5.54.0
Qt Version: 5.11.2
Kernel Version: 4.15.0-42-generic
Comment 1 Alexander Mentyu 2019-01-28 11:20:15 UTC
Created attachment 117697 [details]
There is no such menu when starting in non-mobile width
Comment 2 Nate Graham 2019-02-06 01:11:43 UTC
Confirmed. Marco, is this a deliberate Kirigami behavior designed to inform people of the presence of the sidebar, or a bug in Discover?
Comment 3 Aleix Pol 2019-04-17 18:06:03 UTC
Git commit 246ea726318282417bcdb7d6526521cd5a667c3d by Aleix Pol.
Committed on 17/04/2019 at 18:01.
Pushed by apol into branch 'master'.

Improve startup sequence

Don't the main window start in the default size and then arrange it into
the saved geometry. Pass the width and height so the object is
constructed with the correct sizes. This should solve some visual
glitches at startup.

M  +6    -0    discover/DiscoverObject.cpp
M  +3    -0    discover/DiscoverObject.h
M  +2    -0    discover/qml/DiscoverWindow.qml

https://commits.kde.org/discover/246ea726318282417bcdb7d6526521cd5a667c3d