Improve startup sequence

Don't the main window start in the default size and then arrange it into
the saved geometry. Pass the width and height so the object is
constructed with the correct sizes. This should solve some visual
glitches at startup.

BUG: 403682